--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currency converter</title>
-    <link rel="icon" href="money.jpg">
+    <link rel="icon" href="images/money.png">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/form.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -19,7 +19,7 @@
         <fieldset class="form__field">
             <legend class="form__legend">Currency converter</legend>
             <p>
-              <strong> Wybierz walutę:</strong>  
+                <strong> Wybierz walutę:</strong>
                 <select class="form__currency js-currency" name="currency">
                     <option value="USD">USD</option>
                     <option value="EUR">EUR</option>
@@ -27,7 +27,8 @@
                 </select>
             </p>
             <label>
-               <strong> Wpisz kwotę do wymiany:</strong> <input class="form__amount js-amount" name="amount" type="number" min="1" step="0.5" required>
+                <strong> Wpisz kwotę do wymiany:</strong> <input class="form__amount js-amount" name="amount"
+                    type="number" min="1" step="0.5" required>
             </label>
             <p>
                 <label>
@@ -36,7 +37,8 @@
             </p>
             <p>
                 <label>
-                    <span class="form__result">Twoja kwota po przeliczeniu wynosi: </span><strong class="form__result--strong js-result">N/a</strong>
+                    <span class="form__result">Twoja kwota po przeliczeniu wynosi: </span><strong
+                        class="form__result--strong js-result">N/a</strong>
                 </label>
             </p>
         </fieldset>
